<resources>
    <string name="app_name">SailingQuiz</string>
    <string name="q1">Question 1</string>
    <string name="q1a1">Howdie hooo!</string>
    <string name="q1a2">Ahoy!</string>
    <string name="q1a3">Yarrr! </string>
    <string name="q2">Question 2</string>
    <string name="q2a1">Rudder</string>
    <string name="q2a2">Sail</string>
    <string name="q2a3">Centreboard</string>
    <string name="q2a4">Bow</string>
    <string name="q3">Question 3</string>
    <string name="q3a1">Yawl</string>
    <string name="q3a2">Ketch</string>
    <string name="q4">Question 4</string>
    <string name="q4a1">1,9 km/h</string>
    <string name="q4a2">23,1 km/h</string>
    <string name="q4a3">3 km/h</string>
    <string name="q4a4">0,514 m/s</string>
    <string name="q5">Question 5</string>
    <string name="q6">Question 6</string>
    <string name="q7">Question 7</string>
    <string name="toast">Time is up !</string>
    <string name="editField">Put your answer here</string>
    <string name="startButton">START</string>
    <string name="closeApp">Close?</string>
    <string name="confirmButton">Confirm</string>
    <string name="q1text">What is the sailors greeting signal word ?</string>
    <string name="q2text">Which part of boat makes it more stable? </string>
    <string name="q3text">What type of boat is it ?</string>
    <string name="q4text">Convert 1 knot </string>
    <string name="q5text">A rope used to hoist or lower a sail is called a ________.</string>
    <string name="q6text">When a vessel is under sail the wind felt by those on board is known as the _________ wind. </string>
    <string name="q7text">The guard rail around the bow, i.e. front deck area, is known as _____</string>
    <string name="secondsText">seconds remaining:</string>
    <string name="done">DONE!</string>
    <string name="textAnswer5">Halyard</string>
    <string name="textAnswer5A">halyard</string>
    <string name="pointsTotal">out of 7 points, keep on working</string>
    <string name="pointsTotalGood">out of 7 points, good job !</string>
    <string name="scoredText">You have scored</string>
    <string name="textAnswer6">Apparent</string>
    <string name="textAnswer7">Pulpit</string>
    <string name="textAnswer6A">apparent</string>
    <string name="textAnswer7A">pulpit</string>
    <string name="timeStart">Time is ticking!</string>
</resources>
