<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sailingquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question5Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5text" />

            <!--halyard-->

            <TextView
                android:id="@+id/time3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/question5edit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editField"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/question6Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label6MarginTop"
                android:text="@string/q6"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6text"
                android:textColor="@android:color/black" />
            <!--apparent-->

            <EditText
                android:id="@+id/question6edit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editField"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/question7Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label7MarginTop"
                android:text="@string/q7"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7text"
                android:textColor="@android:color/black" />
            <!--pulpit-->

            <EditText
                android:id="@+id/question7edit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/editField"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@drawable/bird"
            android:orientation="vertical">

            <Button
                android:id="@+id/confirmButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/buttonMarginTop3"
                android:background="@drawable/layout_rounded"
                android:text="@string/confirmButton"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
